[package]
name = "proxybase-cli"
version = "0.1.0"
edition = "2021"
description = "Official ProxyBase command-line client"
license = "MIT"
repository = "https://github.com/proxybasehq/proxybase-cli"
homepage = "https://proxybase.xyz"
rust-version = "1.78"

[dependencies]
libproxybase = { version = "0.4.0" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
dirs = "5"
hex = "0.4"
k256 = { version = "0.13", features = ["ecdsa"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
url = "2"
fast-socks5 = { git = "https://github.com/proxybasehq/fast-sock5" }
uuid = { version = "1", features = ["v4"] }
daemon-kit = "0.1.4"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
